2016-12-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac,
	* tp/Texinfo/MiscXS/configure.ac: Use 'test -n' instead of
	'test -v' for better portability.  Clear another cache variable 
	used internally by autoconf.

2016-12-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS/miscxs.c (xs_merge_text, xs_abort_empty_line):
	Use 'av_len' instead of 'av_top_index' for compatibility with 
	older versions of Perl.

2016-12-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* configure.ac: If XS modules are enabled, configure in 
	tp/Texinfo/MiscXS directory.
	* autogen.sh: Run autoreconf in MiscXS directory.

2016-12-29  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/fail.pl: Change path given for 
	TestXS module so that it will be found when source is configured
	for an out-of-source build.
	* tp/Makefile.am (SUBDIRS, DIST_SUBDIRS): List MiscXS.pm and 
	MiscXS subdirectory.

2016-12-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/TestXS.pm: Use 
	Texinfo::XSLoader module.
	* configure.ac: Change path passed with "-I" to perl so 
	Texinfo::XSLoader module can be found.

2016-12-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_convert): Don't use method 
	call syntax for recursive calls.
	* tp/DebugTexinfo/DebugCount.pm: Remove, as it isn't used much.
	* doc/texinfo.texi (Customization Variables and Options) 
	<TEXINFO_OUTPUT_FORMAT>: Remove mention of
	'debugcount'.
	* tp/t/test_count.t: Delete test.
	* tp/t/test_utils.pl: Don't use "DebugTexinfo::DebugCount" 
	module.

2016-12-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (whole file): Use assignment from @_
	for subroutine arguments instead of "shift".  This shortens the
	code and may be slightly more efficient.

2016-12-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS/miscxs.c (merge_text): Call C function